# agent-desktop-evals

./: .gitignore  CLAUDE.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: SCENARIO-DESIGN.md
reports/live-2026-04-19/: findings.md
reports/live-2026-04-19-pass2/baseline/: report.csv  report.md
reports/live-2026-04-19-pass3/augmented/: report.csv  report.md
reports/live-2026-04-19-pass4/: findings-scenario-b.md
reports/live-2026-04-19-pass4/b-augmented/: report.csv  report.md
reports/live-2026-04-19-pass4/b-baseline/: report.csv  report.md
reports/live-2026-04-19-pass5/: findings-pass5.md
reports/live-2026-04-19-pass5/b-augmented/: report.csv  report.md
reports/live-2026-04-19-pass5/b-baseline/: report.csv  report.md
reports/live-2026-04-19/augmented/: report.csv  report.md
reports/live-2026-04-19/baseline/: report.csv  report.md
scenarios/a-gnome-settings/: README.md  check_state.sh  prompt.md  scenario.toml
scenarios/a-gnome-settings-augmented/: prompt.md  scenario.toml  setup.sh
scenarios/b-libreoffice-write/: README.md  check_state.sh  prompt.md  scenario.toml  setup.sh
src/agent_desktop_bench/: cli.py  env.py  report.py  runner_base.py  scenario.py
src/agent_desktop_bench/runners/: openclaw.py  stub.py
src/agent_desktop_evals/: cli.py  report.py  runner_base.py  scenario.py
src/agent_desktop_evals/runners/: _openclaw_session.py  openclaw.py  stub.py
tests/: conftest.py  test_cli.py  test_env.py  test_openclaw_runner.py  test_openclaw_session.py  test_report.py  test_runner_base.py  test_scenario.py
tests/fixtures/: openclaw-smoke-output.txt
