[project]
name = "agent-desktop-evals"
version = "0.1.0"
description = "Reproducible evals for agent-desktop: paired-baseline benchmark for AI agents controlling Linux desktops with vs without an a11y-first CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Garrett Morrow" }]
dependencies = [
    "pydantic>=2.7",
    "tomli-w>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
bench = "agent_desktop_evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_desktop_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]
